# coremywasm

./: .babelrc.json  Cargo.toml  index.html  index.js  package.json  webpack.config.babel.js
pkg/: core_my_wasm.d.ts  core_my_wasm.js  core_my_wasm_bg.wasm  core_my_wasm_bg.wasm.d.ts  package.json
server/: index.js
src/: index.html  index.js  lib.rs  styles.scss
