[package]
name = "core-my-wasm"
version = "0.1.0"
authors = ["Martin Weiser <martin.weiser@gmail.com>"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.chrono]
version = "0.4"
features = ["serde", "wasmbind"]
